--- a/app/views/layouts/_my_page_menu_bar.html.haml
+++ b/app/views/layouts/_my_page_menu_bar.html.haml
@@ -6,6 +6,8 @@
   %li.container__inner__menu__item
     = link_to "購入商品一覧", buy_list_my_pages_path
   %li.container__inner__menu__item
+    = link_to "いいね！商品一覧", likes_path
+  %li.container__inner__menu__item
     = link_to "フォロー出品者の商品一覧", followers_path
   %li.container__inner__menu__item
     = link_to "ユーザー情報変更", edit_user_registration_path
