--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,7 +1,10 @@
 .container
   = render partial: "layouts/header"
-  .front_image
-    .front_image__left_box
+  .front_image#front_image
+    = image_tag "gradius.png", id: "gradius"
+    #front_image_inner_top
+    / # = image_tag "gradius_bg_3", id: "front_image_inner_top"
+    .front_image__left_box.front_image_item
       %h1
         スマホでかんたん
         %br/
@@ -10,10 +13,11 @@
         コピカリはスマホカメラからすぐに出品できる
         %br/
         購入時も安心な独自システムのアプリのダミーです。
-      .front_image__left_box__stores.clearfix
+      .front_image__left_box__stores.front_image_item.clearfix
         = image_tag "app-store.svg", class: "front_image__left_box__stores__image"
         = image_tag "google-play.svg", class: "front_image__left_box__stores__image front_image__left_box__stores__image--right"
-    = image_tag "front_image.png", class: "front_image__phone_image"
+    = image_tag "front_image.png", class: "front_image__phone_image front_image_item"
+    #front_image_inner_bottom
   .consept_section
     %h2.concept_section__text
       コピカリは、かんたんに売り買いができて、
