--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -4,7 +4,9 @@
 $copicari_back_ground_grey     : #F5F5F5;
 $registration_background_color : #F5F5F5;
 $progress_bar_font_color       : #888888;
+$progress_bar_font_color       : #888888;
 $sell_form_info_head_color     : #888888;
+$item_btn_sold_grey            : #888888;
 $default_font_color            : #333333;
 $registration_form_font_color  : #757575;
 $registration_form_form_color  : #CCCCCC;
