--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -34,6 +34,7 @@
   &__data_table{
     width      : 45%;
     padding    : 8px;
+    margin-left: 20px;
     float      : left;
     text-align : left;
     font-size  : 14px;
