--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -22,12 +22,18 @@
     &__upper{
       position  : relative;
       overflow  : hidden;
+      height    : 350px;
       &__image{
         width     : 100%;
+        max-height: 346px;
+        overflow: hidden;
       }
     }
     &__bottom__image{
       width     : 23%;
+      &--over{
+        opacity : 0.5;
+      }
     }
   }
 
