modify front side to show multiple images

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -10,10 +10,22 @@
           - if @item.stock_status == "sold"
             %span.item_box__image--sold SOLD
         .item__image_box__bottom
-          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
-          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
-          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
-          = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
+          - if @item.images[0].present?
+            = image_tag @item.images[0].image, class: "item__image_box__bottom__image item__image_box__bottom__image--over item_images"
+          - else
+            = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
+          - if @item.images[1].present?
+            = image_tag @item.images[1].image, class: "item__image_box__bottom__image item_images"
+          - else
+            = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
+          - if @item.images[2].present?
+            = image_tag @item.images[2].image, class: "item__image_box__bottom__image item_images"
+          - else
+            = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
+          - if @item.images[3].present?
+            = image_tag @item.images[3].image, class: "item__image_box__bottom__image item_images"
+          - else
+            = image_tag "logos/copicari_logo_small.png", class: "item__image_box__bottom__image"
       %table.item__data_table
         %tr
           %th 出品者
@@ -53,16 +65,23 @@
       = link_to "購入", new_item_buyer_path(@item), class: "item__purchase_btn"
     - else
       .item__purchase_btn.item__purchase_btn--sold 売り切れました
-    .item__description この商品はサンプル品です。
+    .item__description #{@item.description}
     .item__like_box
-      - if user_signed_in? && has_user_liked?(@item)
-        .item__like_box__btn#stop_like_btn{ data: {id: @like.id, user_id: current_user.id, item_id: @item.id} }
-          %span.fa.fa-heart#like_btn_icon<>
-          %i<>
-            いいね
-          %span#item__like_box__btn_likes_number #{get_likes_number(@item)}
+      - if user_signed_in?
+        - if has_user_liked?(@item)
+          .item__like_box__btn#stop_like_btn{ data: {id: @like.id, user_id: current_user.id, item_id: @item.id} }
+            %span.fa.fa-heart#like_btn_icon<>
+            %i<>
+              いいね
+            %span#item__like_box__btn_likes_number #{get_likes_number(@item)}
+        - else
+          .item__like_box__btn#like_btn{ data: {user_id: current_user.id, item_id: @item.id} }
+            %span.fa.fa-heart-o#like_btn_icon<>
+            %i<>
+              いいね
+            %span#item__like_box__btn_likes_number #{get_likes_number(@item)}
       - else
-        .item__like_box__btn#like_btn{ data: {user_id: current_user.id, item_id: @item.id} }
+        .item__like_box__btn#like_btn
           %span.fa.fa-heart-o#like_btn_icon<>
           %i<>
             いいね
